# Hell-Bot

./: NOTICE.md  README.md  db.json  keep_alive.py  main.py  pyproject.toml  work.md
bot/: Account.py  Acount.py  Admin.py  Calc.py  Calculator.py  Convenience.py  Core.py  Dict.py  Game.py  Manage.py  Music.py  Search.py  UserInfo.py  code.py  sentences_eng.txt  sentences_kor.txt
